apps/haenu/dev-tewind-space/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-tewind-space
  namespace: haenu
  labels:
    app: dev-tewind-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-tewind-space
  template:
    metadata:
      labels:
        app: dev-tewind-space
    spec:
      containers:
      - name: dev-tewind-space
        image: hyeonwoo5342/dev-tewind-space:5
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub-secret
