apps/haenu/dev-tewind-space/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-tewind-space-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: space.dsquad.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-tewind-space
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-tewind-space-cricrip-ingress
  namespace: haenu
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: space.tewind.cricrip.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-tewind-space
            port:
              number: 3000
  tls:
  - hosts:
    - space.tewind.cricrip.com
    secretName: letsencrypt-prod
